--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,33 @@
 name: demos
-description: A new Flutter project.
-publish_to: 'none'
 version: 1.0.0+1
+publish_to: none
+description: A new Flutter project.
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
+
 dependencies:
+  bloc: ^8.1.2
   flutter:
     sdk: flutter
-  bloc: ^8.1.2
   flutter_bloc: ^8.1.3
-  freezed_annotation: ^2.2.0
-  json_annotation: ^4.8.1
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^2.2.0
+  go_router: ^8.0.2
   intl: any
+  json_annotation: ^4.8.1
+  qr_code_scanner: ^1.0.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
+  build_runner: ^2.4.5
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^5.0.0+1
   freezed: ^2.3.5
-  build_runner: ^2.4.5
   json_serializable: ^6.7.0
+  very_good_analysis: ^5.0.0+1
+
 flutter:
   generate: true
   uses-material-design: true
